--- a/k8s/db-secret.yaml
+++ b/k8s/db-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   name: db-credentials
 type: Opaque
 data:
-  username: <base64-encoded>
-  password: <base64-encoded>
+  username: YWRtaW4K
+  password: YWRtaW4xMjMK
