--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: myrepo/backend:latest
+        image: vvram143/myapp/backend:latest
         ports: [{ containerPort: 3000 }]
         env:
           - name: DB_USER
