--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -22,3 +22,16 @@ spec:
           - name: DB_PASS
             valueFrom:
               secretKeyRef: { name: db-credentials, key: password }
+        envFrom:
+         - ConfigMapRef:
+           name: backend
+
+----
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: backend
+  namespace: expense
+data:
+   DB_HOST:
+              
