--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: myrepo/backend:latest
+        image: vvram143/myapp/backend:latest
         ports: [{ containerPort: 3000 }]
         env:
           - name: DB_USER
@@ -22,3 +22,17 @@ spec:
           - name: DB_PASS
             valueFrom:
               secretKeyRef: { name: db-credentials, key: password }
+
+---   
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+   name: backend
+spec:
+   scaleTargetRef:
+       apiVersion: apps/v1
+       kind: Deployment
+       app: backend
+   minReplicas: 1
+   maxReplicas: 10
+   targetCPUUtilizationPercentage: 75  
